tests/palaiologos/fail/integer_bounds/-2^32+1/rep_putc.asm
rep putc -0ffffffffh
